# Delimitador

./: CLI.py  handoff.md  main.py  pyproject.toml
delineate_anything/: Instalar Miniconda.bat  batch_sample.yaml  conf_sample.yaml  descargarDinamicWord.py  generar_mascara_lclu.py  generar_mascara_lclu_directo.py  generar_mascara_ndvi.py  preparar entorno y librerias.bat
pipeline/: __init__.py  ingesta.py  modulo_fenologico.py  modulo_parcelas.py
tests/: test_post_procesamiento_parcelas.py
utils/: __init__.py  aplicar_whittaker.py  db.py  descargar_datacube.py  dict_a_dataframe.py  post_procesamiento_parcelas.py  visualizar_datacube.py  visualizar_datacube_rgb.py
