[project]
name = "segmentacion-clasificacion-estimacion-maiz-comayagua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "folium>=0.19.0",
    "geopandas>=1.1.4",
    "holoviews>=1.23.0",
    "hvplot>=0.12.2",
    "numpy>=2.5.0",
    "openeo>=0.39.1",
    "plotly>=6.0.0",
    "rasterio>=1.5.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.45.0",
    "streamlit-folium>=0.25.0",
    "whittaker-eilers>=0.2.0",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = []
